tests/e2e/semantics/output_assignment_existing_var5.error
Error: syntax error in story at line 3, column 27

3|        when server listen as x
                                ^

E0108: Service output `x` must be unique. Use `as outputName`
