tests/e2e/semantics/output_assignment_existing_var5.story
x = 1
http server as b
    when server listen as x
        a = 1
